--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -46,11 +46,29 @@
 
 .navLinks li {
     margin: 0.5em 0;
+    width: 100%;
+     position: relative;
+
 }
 
 .navLinks a {
     color: #fff;
     text-decoration: none;
+}
+.navLinks li::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: width 0.2s ease-in-out;
+}
+
+.navLinks li:hover::before {
+    width: 100%;
+    background-color: rgba(255,255,255, 0.4);
 }
 
 .fas {
