--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -125,7 +125,8 @@
     }
 
     .project-languages {
-        padding: 10px;
+        padding: 0 10px;
+        justify-content: center;
 
     }
 
@@ -147,6 +148,10 @@
         gap: 2em;
         padding: 0;
         margin: 0;
+    }
+
+    .project-info {
+        margin: 30px 0;
     }
 
 }
