--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,11 +1,10 @@
 .Navbar {
-    position: fixed; /* Set the navbar to a fixed position */
-    top: 0; /* Place it at the top of the viewport */
+    position: fixed; 
+    top: 0;
     left: 0;
     right: 0;
     display: flex;
     margin-top:20em 0;
-    /* max-width: 2500px; */
     margin: auto;
     justify-content: space-between;
     align-items: center;
@@ -14,10 +13,9 @@
     height: 80px;
     padding: 0 20px;
     font-size: 20px;
-    z-index: 1000; /* Ensure it's above other content */
+    z-index: 1000; 
 }
 
-/* Your other CSS styles can remain the same */
 
 
 .rightSideNav {
@@ -31,7 +29,7 @@
     transition: max-height 0.3s ease, opacity 0.3s ease;
     max-height: 0;
     opacity: 0;
-    overflow: hidden; /* Add this line to hide overflowing content */
+    overflow: hidden; 
 }
 
 .navLinks {
@@ -41,7 +39,10 @@
     list-style: none;
     padding: 0;
     gap: 20px;
-    margin: 0; /* Reset margin to prevent unwanted spacing */
+    margin: 0; 
+    
+    display:flex;
+
 }
 
 .navLinks li {
@@ -77,15 +78,16 @@
 
 @media screen and (min-width: 769px) {
     .leftSideNav {
+        
         max-height: 100%;
         opacity: 1;
-    }
+     }
 }
 
 @media screen and (max-width: 768px) {
     .Navbar {
         flex-direction: column;
-        padding: 10px; /* Adjust padding for smaller screens */
+        padding: 10px; 
     }
 
     .fas {
@@ -107,10 +109,16 @@
         position: absolute;
         text-align: center;
         flex-direction: column;
-        width: 100%; /* Make the navLinks take up the full width */
-        top: 50px; /* Add space below the Navbar */
+        width: 100%; 
+        top: 50px; 
         left: 0;
-        padding: 20px; /* Adjust padding as needed */
-        box-sizing: border-box; /* Include padding in width calculations */
+        padding: 20px; 
+        box-sizing: border-box;  
+        display: none;
+    }
+
+    .navLinks.active{
+        display:flex;
+
     }
 }
