--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -41,7 +41,7 @@
 
 .SkillItem img {
     border-radius: 20%;
-    object-fit: cover;
+    /* object-fit: cover; */
     transition: transform 0.3s ease;
 }
 
