--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -47,7 +47,10 @@
 
  .Banner h1 {
      padding-bottom: 1em;
-
+     font-size: 3.5rem;
+     background: linear-gradient(90deg, var(--text-primary), var(--accent-color));
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
  }
 
  .Banner h3 {
@@ -61,11 +64,7 @@
      flex:1;
      flex-direction: column;
  }
- .Banner h1{
-    font-size: 1.3rem;
-
- }
-
+ 
  .BannerIcon {
      width: 100%;
      max-width: 400px;
