--- a/src/Components/Projects/Modal.css
+++ b/src/Components/Projects/Modal.css
@@ -61,7 +61,7 @@
     position: relative;
     top: 0;
     min-height: 495px;
-     height: 100%;
+    /* height: 100%; */
     overflow: hidden;
      margin-bottom: 20px; 
 }
