--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -38,12 +38,15 @@
     text-align: center;
     overflow: hidden;
     transform: scale(1);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    /* transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out; */
+    transition: 0.3s ease-in all;
 }
 
 .project-card:hover {
-    transform: scale(1.05);
+    /* transform: scale(1.05); */
     box-shadow: 0 15px 30px rgba(10, 10, 10, 0.9);
+    scale: 1.05;
+
 }
 
 
@@ -53,6 +56,9 @@
     border-radius: 10px;
     animation: float 4s ease-in-out infinite;
 }
+
+
+
 
 @keyframes float {
 
