--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@ button {
 }
  
 .App {
-  background-color: #1B1F24;
+  background: linear-gradient(to bottom, #22282f, #1c1f26);
+  /* background-color: #1B1F24; */
   width: 100%;
   height: 100%;
   min-height: 100vh;
