--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,67 +1,67 @@
 .About {
-    background-color: #22282f;
-    color: #fff;
-    min-height: 700px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.aboutContent h3 {
-    text-align: center;
-    width: 100%;
-    padding: 1em;
-    color: cyan;
-    color: #13bbff;
-
+  /* background: linear-gradient(to bottom, #22282f, #1c1f26); */
+  color: #fff;
+  padding: 100px 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .aboutContent {
-    font-size: 1.3em;
-    display: flex;
-    align-items: center;
-     justify-content: space-around;
-     max-width: 2500px;
-    width: 100%;
-    padding: 0 5em;
+  max-width: 900px;
+  width: 100%;
+  text-align: center;
 }
 
-.aboutText p {
-    max-width: 850px;
-    width: 100%;
-    margin: auto;
-    font-size: 1.3rem;
+.aboutHeader {
+  font-size: 2.5rem;
+  color: #13bbff;
+  margin-bottom: 2rem;
+  font-weight: 600;
 }
 
-.aboutIcon {
-    max-width: 450px;
-    width: 100%;
-
-    text-align: center;
+.aboutTextBlock {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  color: #ccc;
+  text-align: justify;
+  padding: 0 1rem;
 }
 
-@media screen and (max-width:900px) {
+.aboutTextBlock p {
+  margin-bottom: 1.8rem;
+}
 
+.aboutOutro {
+  color: #13bbff;
+  font-weight: 500;
+  text-align: center;
+}
 
-    .About {
-        height: auto;
-    }
+.quickFacts {
+  margin-top: 3rem;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  padding-top: 1.5rem;
+  color: #aaa;
+  font-size: 1rem;
+  line-height: 1.8;
+}
 
-    .aboutIcon{
-        width: 200px;
-    }
-    .aboutIcon img{
-        width: 100%;
-    }
+.quickFacts p {
+  margin: 0.5rem 0;
+}
 
-    .aboutContent {
-        padding: 10px;
-        text-align: center;
-        flex-direction: column;
-    }
-    .aboutText p , .Banner p {
-        font-size: 1rem;
-    }
+/* Responsive tweaks */
+@media screen and (max-width: 768px) {
+  .aboutHeader {
+    font-size: 2rem;
+  }
+
+  .aboutTextBlock {
+    font-size: 1rem;
+    padding: 0;
+  }
+
+  .quickFacts {
+    font-size: 0.95rem;
+  }
 }
